corregi a metodologia bem

--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
 </head>
 <body>
   <header>
-    <nav class="navegacion">
+    <nav class="navegacion_Contenedor">
       <h1>Barra de Navegación</h1>
-      <a href="#">Hola</a>
-      <a href="#">como</a>
-      <a href="#">estas</a>
-      <a href="#">lalala</a>
+        <div class="navegacion__enlaces">
+          <a href="#">Producto</a>
+          <a href="#">Contactos</a>
+          <a href="#">Servicios</a>
+          <a href="#">A cerca de </a>
+        </div>
     </nav>
   </header>
 
 
-  <section class="tarjetas">
+  <section class="tarjetas_contenedor">
     <div class="tarjeta">
       <h2>Pomerania</h2>
         <img src="descarga.jpg" alt="imagen de un perrito">
@@ -52,7 +54,7 @@
 
   <div class="contenedor_galeria">
       <img src="iglesia.jpg" alt="imagen de una iglesia">
-      <img src="quebrada.jpg" alt="imagen de una quebrada" class="contenedor_galeria__img">
+      <img src="quebrada.jpg" alt="imagen de una quebrada" >
       <img src="selva.jpg" alt="imagen de una selva">
       <img src="sapitos.jpg" alt="imagen de una selva">
   </div>
