--- a/index.html
+++ b/index.html
@@ -115,14 +115,28 @@
     </div>
   </section>
     
-  <aside class="sidebar__navegacion">
-    <ul class="menu__principal">
-      <li class="menu__item"><a href="#">Inicio</a></li>
-      <li class="menu__item"><a href="#">Productos</a></li>
-      <li class="menu__item"><a href="#">Servicios</a></li>
-      <li class="menu__item"><a href="#">Contacto</a></li>
-    </ul>
-  </aside>
+  <footer class="footer">
+    <div class="footer__columna">
+      <h3>Acerca de nosotros</h3>
+      <p>
+        Nos dedicamos a conectar familias con cachorros sanos y felices. 
+      </p>
+    </div>
+    <div class="footer__columna">
+      <h3>Enlaces útiles</h3>
+      <ul>
+        <li><a href="#">Inicio</a></li>
+        <li><a href="#">Productos</a></li>
+        <li><a href="#">Contacto</a></li>
+      </ul>
+    </div>
+    <div class="footer__columna">
+      <h3>Contáctanos</h3>
+      <p>Email: contacto@empresa.com</p>
+      <p>Teléfono: +57 310 123 4567</p>
+      <p>Dirección: Calle 123, Ciudad, País</p>
+    </div>
+  </footer>
 
 </body>
 </html>
